################################################################################
#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

development version

190308 Martin Raden :
 * bin/CommandLineParsing :
   + --parameterFile argument (specify additional parameters via config file);
     command line arguments take precedence over config file parameters
   + configFileName : file from where to read parameters from
   * bool flags now set via boost not via explicit count check
   + bool flags can now be explicitly set with value , eg --noSeed=false, eg
     to overwrite arguments from config file  
 + doc/figures/freepik-*.zip : original icon downloads from freepik.com
 + doc/figures/icon-up.* : up arrow to be used for overview navigation
 * README.md :
   + parameterFile docu
   + direct links to overview (table of content) after each subsection

190307 Martin Raden :
 * IntaRNA/SeedConstraint :
   + bpGUallowed : whether or not GU base pairs are allowed within seeds
   + isGUallowed() : returns bpGUallowed
   + maxEhybrid : maximal hybridization energy
   + getMaxEhybrid()
 * IntaRNA/RnaSequence :
   + bpGUcodes : base pair codes for GU and UG
   + isGU() : tests whether or not two positions can form a GU base pair
 * IntaRNA/InteractionEnergy :
   + isGU() : tests whether or not two positions can form a GU base pair
 * IntaRNA/SeedHandler :
   * isFeasibleSeedBasePair() :
     + check if GU base pair are allowed or not
 * IntaRNA/HelixHandlerNoBulgeMax :
   * fillHelixSeed() : 
     * now based on seed iteration to speed up
 * CommandLineParsing :
   + helixMinPu : minimal unpaired probability (per sequence) of considered
     helices (to make interface analogously to seed constraints)
   - helixMaxED : replaced by helixMinPu
   + seedNoGU : if present, GU base pairs are not allowed within seeds