@@ -8,6 +8,14 @@
 
 development version
 
+190310 Martin Raden :
+ + IntaRNA/PredictorMfeEns : base class for ensemble-based predictors
+   + overallZhybrid : overall hybridization partition function since last 
+     predict() call
+   + initZ()
+   + updateZ()
+   + getHybridZ() : access to the overall hybridization partition function
+
 190308 Martin Raden :
  * bin/CommandLineParsing :
    + --parameterFile argument (specify additional parameters via config file);
